<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="default_notification_channel_id">firebase-messaging</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="app_name" tools:ignore="PrivateResource">SeQure</string>

    <string name="slogan">Your <font fgcolor='#007DC3'>Health</font> is Our Priority</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="language_title">Language</string>
    <string name="choose_your_preferred_language">Choose your preferred language</string>
    <string name="next">Next</string>
    <string name="sign_in_welcome_message">To your SeQure account</string>
    <string name="sign_up_welcome_message">Create your account to start your SeQure trip</string>
    <string name="email_or_mobile">Email / Mobile</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forget_password">Forget Password?</string>
    <string name="password">Password</string>
    <string name="corporate">Corporate</string>
    <string name="individual">Individual</string>
    <string name="register_as">Register as</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="verification_welcome_message">
        <![CDATA[
        Please enter the verification code we have sent to
        <b><font color=#007DC3>%1$s</font></b>
        ]]>
    </string>
    <string name="try_resend_code">Haven\'t receive the code?\nTry send it again in 00:%1$d</string>
    <string name="send_again">Send Again</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="home">Home</string>
    <string name="brands">Brands</string>
    <string name="categories">Categories</string>
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>
    <string name="shopping_cart">Shopping Cart</string>

    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="cancel">Cancel</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="street">Street Address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="personal_info">Personal Info</string>
    <string name="saved_address">Saved Address</string>
    <string name="address">Address</string>
    <string name="feel_free_to_contact_us">Feel free to contact us</string>
    <string name="write_here_your_message">Write here your message....</string>
    <string name="submit">Submit</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="about_us">About Us</string>
    <string name="for_you">For You</string>
    <string name="for_others">For Others</string>
    <string name="are_you_requesting_the_second_opinion">Are you requesting the second opinion for yourself or for others?</string>
    <string name="choose_speciality">Choose speciality</string>
    <string name="please_choose_speciality">Please choose speciality</string>
    <string name="where_do_you_feel_the_pain">Where do you feel the pain?</string>
    <string name="save">Save</string>
    <string name="write_here_what_you_feel">Write here what you feel....</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="choose_doctor">Choose a Doctor</string>
    <string name="medical_reports">Medical Reports</string>
    <string name="lab_tests">Lab Tests</string>
    <string name="radiology_scans">Radiology Scans</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="choose">Choose</string>
    <string name="set_your_new_password">Set your new password</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="relationship">Relationship</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="my_profile">My Profile</string>
    <string name="saved_successfully">Data saved successfully</string>

    <string name="relationship_husband">Husband</string>
    <string name="relationship_wife">Wife</string>
    <string name="relationship_son">Son</string>
    <string name="relationship_daughter">Daughter</string>
    <string name="relationship_other">Other</string>

    <!--  region Validation messages -->
    <string name="invalid_phone_or_password">Invalid mobile or password</string>
    <!-- endregion -->

    <!--  region Array of messages -->
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="language_array">
        <item>English</item>
        <item>Arabic</item>
    </string-array>

    <string-array name="lang_array">
        <item>en</item>
        <item>ar</item>
    </string-array>

    <string-array name="pain_array">
        <item>Select a Pain…</item>
    </string-array>
    <!-- endregion -->

    <!--  region Preference -->
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="second_opinion_title">Second Opinion</string>
    <string name="second_opinion">Second\nOpinion</string>
    <string name="discount_card">Discount\nCard</string>
    <string name="discount_card_title">Discount Packages</string>
    <string name="discount_card_subtitle">Choose your package</string>
    <string name="upcoming_service">Upcoming\nService</string>
    <string name="find_service_provider">Find Service Provider</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="your_purchase_has_been_successful">Your purchase has been successful</string>
    <string name="read_more">Read More</string>
    <string name="supporting_network">Supporting Network</string>
    <string name="detailed_benefits">Detailed Benefits</string>
    <string name="benefits">Benefits</string>
    <string name="policy">Policy</string>
    <string name="offer_details">Offer Details</string>
    <string name="service_providers">Service Providers</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="please_choose_your_dependent">Please Choose your Dependent</string>
    <string name="we_are_pleased_to_help_you">We are pleased to help you</string>
    <string name="good_morning">Good Morning, %1$s</string>
    <string name="notifications">Notifications</string>
    <string name="report">Report</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="medication">Medication</string>
    <string name="done">Done</string>
    <string name="patient_name">Patient Name</string>
    <string name="choose_your_doctor">Choose Your Doctor</string>
    <string name="dosage">Dosage</string>
    <string name="start_date">Start date</string>
    <string name="comments">Comments</string>
    <string name="request_some_general_questions">You\'re about to finish the questions to send your request, Some general questions to go</string>
    <string name="you_are_doing_great">You are doing great</string>
    <string name="keep_going_answer_the_questions">Keep going answer the questions</string>
    <string name="great">Great</string>
    <string name="new_dependent">New Dependent</string>
    <string name="resume_second_opinion_request">Do you want to continue your previous second opinion request?</string>
    <!-- endregion -->
</resources>
