<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_house"
        android:orderInCategory="1"
        android:title="@string/home" />

    <item
        android:id="@+id/brand"
        android:icon="@drawable/ic_megaphone"
        android:orderInCategory="3"
        android:title="@string/brands" />

    <item
        android:id="@+id/offer"
        android:icon="@drawable/ic_percentage"
        android:orderInCategory="4"
        android:title="@string/offers"
        android:visible="false" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_user"
        android:orderInCategory="5"
        android:title="@string/profile" />

</menu>