<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="8dp"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/are_you_requesting_the_second_opinion"
        android:textAppearance="?attr/textAppearanceBody2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="8dp"
        app:srcCompat="@drawable/ic_doctor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/for_you"
        style="@style/App.Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="8dp"
        android:paddingVertical="12dp"
        android:text="@string/for_you" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/for_other"
        style="@style/App.Widget.Button.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="8dp"
        android:paddingVertical="12dp"
        android:text="@string/for_others" />
</androidx.appcompat.widget.LinearLayoutCompat>