<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_app_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="8dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/medical_reports"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textSize="22sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/medical_reports"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginVertical="8dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/lab_tests"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textSize="22sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lab_tests"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginVertical="8dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/radiology_scans"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textSize="22sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/radiology_scans"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginVertical="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yes"
                style="@style/App.Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="8dp"
                android:paddingVertical="16dp"
                android:text="@string/choose_doctor" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>